# Straving-C-days

./: .gitignore
.exercises/: exc2.cpp  exc4.cpp  exc6.cpp
exercises/: CMakeLists.txt  OOP1.cpp  OOP2.cpp  OOP3.cpp  array1.cpp  array2.cpp  ddat1.cpp  ddat2.cpp  ddat3.cpp  exc1.cpp  exc3.cpp  exc5.cpp  exc6.cpp  exc7.cpp
exercises/Chess-build/: CheckValidator.cpp  CheckValidator.h  MoveValidator.cpp  MoveValidator.h  main.cpp
exercises/File Reader/: csv_reader.cpp  csv_reader.h  json_reader.cpp  json_reader.h  main.cpp  txt_reader.cpp  txt_reader.h  xml_reader.cpp  xml_reader.h
